Fixed contrast error

--- a/css/weatherplan.css
+++ b/css/weatherplan.css
@@ -37,7 +37,7 @@ footer,
 nav li a,
 nav li {
     background-color: #5f90b1;
-    color: white;
+    color: black;
     text-decoration: none;
     text-align: center;
     list-style-type: none;
